styles/typography.css
dd, dt, h1, h2, h3, h4, h5, h6, p, td, th {
	margin-block-start:  1cap; /* Temp spacing. */
	margin-inline-end:   calc(-1 * var(--right));
	margin-inline-start: calc(-1 * var(--left));
	max-inline-size:     60ch;
	text-box-edge:       cap alphabetic; /* 🥹 */
	text-box-trim:       trim-both;      /* 😭 */

	/* TODO Firefox warning message! */
}

h1, h2, h3, h4, h5, h6 { text-transform: uppercase }

/* Faux-italics. */
em {
	font-style:        italic;
	font-synthesis:    none; /* Prevent Safari from doing it. */
	margin-inline-end: 0.1em;

	/* Added by an 11ty `transform`. */
	span {
		display:   inline-block;
		transform: skew(-15deg) translateX(0.1em);
	}
}

/* Temp spacing. */
body { margin: 3cap }

